Fri Jan 30 22:28:09 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkclist.{c,h}:
	   - Conformity to new reference counting schemes
	   - Font and color information is no-longer taken from
	     the (possibly unitialized) style before the widget
	     is realized, but is obtained when needed. (Fixes
	     problems with non-default styles)
	   - white_gc => base_gc where appropriate
	   - Handle graphics expose events correctly (or as
	     correctly as anywhere else) so that scrolling when
	     overlapped works.

Fri Jan 30 21:32:11 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkwidget.c (gtk_widget_init): Don't replace the object
	flags, augment them. (Otherwise we'll clear the FLOATING flag)

Fri Jan 30 17:41:06 1998  George Lebl  <jirka@5z.com>

	* gtk/gtktable.c: fixed round-off error in calculation
	  of tabels with a lot of cells

Fri Jan 30 08:51:16 1998  Federico Mena  <federico@bananoid.nuclecu.unam.mx>

	* gdk/gdkcc.c (gdk_color_context_get_pixel): red/green/blue
 	parameters are now expected to be in [0, 65535], to be consistent
 	with the rest of Gdk.
	(gdk_color_context_get_pixels): Made it use 16-bit color values as
 	well.  Fixed mdist=1000000 buglet (it should start with at least
 	0x1000000).
	(gdk_color_context_get_pixels_incremental): Same as
	gdk_color_context_get_pixels().

Thu Jan 29 22:57:39 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkstyle.c (gtk_default_draw_polygon): Close
	  the polygon if it isn't already. (To match gtk_draw_polygon)
	  Simplified logic. (Appearance could probably be
	  improved for objects with gradual curves by adding in
	  some intermediate edge coloration)

Thu Jan 29 21:36:14 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtksignal.c (gtk_signal_query): new function to gather
 	  information about a certain signal.

	* gtk/gtksignal.c (gtk_signal_newv): new function similar to
 	  gtk_signal_new().

	* gtk/gtksignal.c (gtk_signal_real_emit): check for function_offset
	  == 0.
